<?xml version="1.0"?>
<package format="3">
  <name>marm_description</name>
  <version>0.0.1</version>
  <description>The marm_description package (ROS 2 version)</description>

  <maintainer email="dsupermaker@163.com">hcx</maintainer>
  <license>MIT</license>

  <!-- 构建工具：ament_cmake -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行依赖：运行时用到的工具 -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
  </export>
</package>
